--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
+    "chromedriver": "^78.0.1",
     "concurrently": "^5.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
