--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "chromedriver": "^78.0.1",
-    "concurrently": "^5.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "knex": "^0.20.1",
     "multer": "^1.4.2",
     "pg": "^7.12.1",
     "selenium-webdriver": "^4.0.0-alpha.5"
+  },
+  "devDependencies": {
+    "concurrently": "^5.0.0",
+    "dotenv": "^8.2.0"
   }
 }
