--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "knex": "^0.20.1",
     "multer": "^1.4.2",
     "pg": "^7.12.1",
-    "selenium-webdriver": "^4.0.0-alpha.5"
+    "selenium-webdriver": "^4.0.0-alpha.5",
+    "validator": "^12.1.0"
   },
   "devDependencies": {
     "concurrently": "^5.0.0",
